force-app/main/default/objects/CBK_CaseHistory__c/CBK_CaseHistory__c.object-meta.xml
<CustomObject>
    <description>Objeto para el registro de cambios en el Historial del objeto Case. Creado a petición de los usuarios de HDT.</description>
    <label>CBK_CaseHistory</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CBK_CaseHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBK_CaseHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>