force-app/main/default/objects/CBK_CaseHistory__c/fields/CBK_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CBK_CreatedDate__c</fullName>
    <description>Sirve para saber la fecha de creación del historial del caso</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CreatedDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>