force-app/main/default/objects/CBK_CaseHistory__c/fields/CBK_Field__c.field-meta.xml
<CustomField>
    <fullName>CBK_Field__c</fullName>
    <description>Sirve para saber el campo del caso que se ha modificado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Campo</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>