force-app/main/default/objects/CBK_CaseHistory__c/fields/CBK_IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>CBK_IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sirve para saber si se ha borrado un caso</description>
    <label>IsDeleted</label>
    <type>Checkbox</type>
</CustomField>