force-app/main/default/objects/CBK_CaseHistory__c/fields/CBK_NewValue__c.field-meta.xml
<CustomField>
    <fullName>CBK_NewValue__c</fullName>
    <description>Sirve para saber el nuevo valor del registro modificado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Valor nuevo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>